# qjsonrpc-qml

./: .gitignore  AUTHORS  CHANGES  CMakeLists.txt  COPYING  README  README.md  qjsonrpc.pri  qjsonrpc.pro
debian/: rules
json/: json.pri  qjsonvalue.h
src/: main.cpp  qjsonrpc.cpp  qjsonrpc.h  qjsonrpc_p.h  qjsonrpcabstractserver.cpp  qjsonrpcabstractserver.h  qjsonrpcabstractserver_p.h  qjsonrpcglobal.cpp  qjsonrpcglobal.h  qjsonrpchttpclient.cpp  qjsonrpchttpclient.h  qjsonrpchttpserver.cpp  qjsonrpchttpserver.h  qjsonrpchttpserver_p.h  qjsonrpclocalserver.cpp  qjsonrpclocalserver.h  qjsonrpcmessage.cpp  qjsonrpcmessage.h  qjsonrpcmessage_p.h  qjsonrpcpeer.cpp  qjsonrpcpeer.h  qjsonrpcserver.h  qjsonrpcservice.cpp  qjsonrpcservice.h  qjsonrpcservice_p.h  qjsonrpcserviceprovider.cpp  qjsonrpcserviceprovider.h  qjsonrpcservicereply.cpp  qjsonrpcservicereply.h  qjsonrpcservicereply_p.h  qjsonrpcsocket.cpp  qjsonrpcsocket.h  qjsonrpcsocket_p.h  qjsonrpctcpserver.cpp  qjsonrpctcpserver.h  src.pro
src/features/: qjsonrpc.prf
src/json/: json.pri  qjson_p.h  qjsonarray.cpp  qjsonarray.h  qjsondocument.cpp  qjsondocument.h  qjsonobject.cpp  qjsonobject.h  qjsonparser.cpp  qjsonvalue.cpp  qjsonvalue.h
tests/: shared.pri  tests.pri  tests.pro
tests/auto/: auto.pro
tests/auto/issue22/: tst_issue22.cpp
tests/auto/json/: json.pro  tst_qtjson.cpp
tests/auto/qjsonrpchttpclient/: qjsonrpchttpclient.pro  testhttpserver.cpp  testhttpserver.h  tst_qjsonrpchttpclient.cpp
tests/auto/qjsonrpchttpserver/: tst_qjsonrpchttpserver.cpp
tests/auto/qjsonrpcmessage/: qjsonrpcmessage.pro  tst_qjsonrpcmessage.cpp
tests/auto/qjsonrpcpeer/: qjsonrpcpeer.pro  tst_qjsonrpcpeer.cpp
tests/auto/qjsonrpcserver/: qjsonrpcserver.pro  testservices.cpp  testservices.h  tst_qjsonrpcserver.cpp
tests/auto/qjsonrpcservice/: qjsonrpcservice.pro  (+1 more)
tests/json/: json.pro
tests/manual/: manual.pro
tests/messages/: messages.pro  testmessages.cpp
(+39 files in other folders)
